--- a/public/www/choi/register.html
+++ b/public/www/choi/register.html
@@ -71,7 +71,7 @@
         <p class="np_txt forNickname">이미 사용 중인 닉네임입니다.</p>
 
         <div class="ipt_box">
-            <input type="date" id="birthdate" name="birthdate" placeholder="생년월일">
+            <input type="date" id="birthdate" name="birthdate" placeholder="생년월일" required>
         </div>
 		<!-- 전화번호 미입력 시 띄우는 문구 -->
         <p class="np_txt forBirthdate">생년월일을 입력해주세요.</p>
