--- a/public/www/choi/register_success.html
+++ b/public/www/choi/register_success.html
@@ -25,12 +25,13 @@
 		<h2 class="page_title">회원가입</h2>
 	</div>
     <div id="register_wrap">
-        <div class="register_detail">
-            <h2 class="title02">환영합니다.<br>회원가입이 완료 되었습니다!</h2>
+        <div class="register_success">
+            <h1 class="logo"><img src="img/logo.png" alt="로고"></h1>
+            <h2 class="title02">환영합니다🎉<br>회원가입이 완료 되었습니다!</h2>
+            <div class="btn_wrap">
+                <button class="btn btn_style01" onclick="location.href='index.html'">로그인 하러 가기</button>
+            </div>
         </div>
-		<div class="btn_wrap">
-			<button class="btn btn_style01" onclick="location.href='index.html'">로그인 하러 가기</button>
-		</div>
     </div>
 </body>
 </html>
