--- a/public/www/choi/dashboard.html
+++ b/public/www/choi/dashboard.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/pretendard/1.3.9/static/pretendard.css" integrity="sha512-NzqTHTrO48HsIamogmIaVhTXoSgRF24Cn+ynrNYrFuKrY0AdDbmcNieiOHsQARS/r0Gax9VwV3/rVMHs3ipUlg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<!-- google icon -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,1,0" />
-	<!-- swiper -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.7/swiper-bundle.css" integrity="sha512-+pwQ1JBCDk3EJnDMJkIylD98GjOygtUbTAIN2J4s8GXuOvB9j8THTJZBmwhw59oI75Wl8FpIJkbw72/tlFDGhA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/8.4.7/swiper-bundle.min.js" integrity="sha512-h5Vv+n+z0eRnlJoUlWMZ4PLQv4JfaCVtgU9TtRjNYuNltS5QCqi4D4eZn4UkzZZuG2p4VBz3YIlsB7A2NVrbww==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- CSS -->
     <link rel="stylesheet" href="css/common.css">
@@ -22,15 +19,15 @@
 <body>
 	<div id="dashboard">
 		<h1><img src="img/logo_face_white.png" alt="할수잇서"></h1>
-		<h2 class="title02">OOO님, 안녕하세요!</h2>
+		<h2 class="title01">OOO님, 안녕하세요!</h2>
 		<div id="lastWeekAverage" class="radius_box">
-			<h3 class="txt03_bold">최근 일주일 기록</h3>
+			<h3 class="txt02_bold">최근 일주일 기록</h3>
 			<ul class="average_list">
 				<li>
 					<div class="icon_box exercise"><span class="material-symbols-rounded">fitness_center</span></div>
 					<div class="txt_box">
 						<!-- <p class="txt03">평균 <br>운동 시간</p> -->
-						<p class="txt02_bold">120</p>
+						<p class="txt01_bold">120</p>
 						<p class="danwi">분</p>
 					</div>
 				</li>
@@ -38,7 +35,7 @@
 					<div class="icon_box fire"><span class="material-symbols-rounded">local_fire_department</span></div>
 					<div class="txt_box">
 						<!-- <p class="txt03">평균 <br>소모 칼로리</p> -->
-						<p class="txt02_bold">2,000</p>
+						<p class="txt01_bold">2,000</p>
 						<p class="danwi">Kcal</p>
 					</div>
 				</li>
@@ -46,38 +43,45 @@
 					<div class="icon_box eat"><span class="material-symbols-rounded">egg_alt</span></div>
 					<div class="txt_box">
 						<!-- <p class="txt03">평균 <br>섭취 칼로리</p> -->
-						<p class="txt02_bold">1,800</p>
+						<p class="txt01_bold">1,800</p>
 						<p class="danwi">Kcal</p>
 					</div>
 				</li>
 			</ul>
 		</div>
-		<div id="lastWeekCompare">
-			<h3 class="txt03_bold">지난 주 데이터 비교</h3>
-			<div class="chart_swp swiper-container">
-				<div class="chart_pg"></div>
-				<ul class="chart_list swiper-wrapper">
-					<li class="swiper-slide radius_box">
-						<!-- <h4 class="txt03">운동량</h4> -->
-						<canvas id="chartExercise" width="200" height="250"></canvas>
-					</li>
-					<li class="swiper-slide radius_box">
-						<!-- <h4 class="txt03">소모 칼로리</h4> -->
-						<canvas id="chartFire" width="200" height="250"></canvas>
-					</li>
-					<li class="swiper-slide radius_box">
-						<!-- <h4 class="txt03">섭취 칼로리</h4> -->
-						<canvas id="chartEat" width="200" height="250"></canvas>
-					</li>
-				</ul>
-			</div>
+		<div id="lastWeekCompare" class="radius_box">
+			<h3 class="txt02_bold">지난 주 데이터 비교</h3>
+			<ul class="chart_list">
+				<li>
+					<h4 class="txt03">운동량</h4>
+					<canvas id="chartExercise" width="200" height="250"></canvas>
+				</li>
+				<li>
+					<h4 class="txt03">소모 칼로리</h4>
+					<canvas id="chartFire" width="200" height="250"></canvas>
+				</li>
+				<li>
+					<h4 class="txt03">섭취 칼로리</h4>
+					<canvas id="chartEat" width="200" height="250"></canvas>
+				</li>
+			</ul>
 		</div>
 		<div id="myGoal" class="radius_box">
-			<h3 class="txt03_bold">운동 목표</h3>
+			<h3 class="txt02_bold">운동 목표</h3>
 			<p class="txt03">운동 목표입니다.</p>
+			<button class="btn btn_add" onClick="fnOpenModal();"><img src="img/btn_add.svg" alt="추가하기"></button>
 		</div>
 	</div>
-	<script>
-	</script>
+	<div id="modal_bg" onClick="fnCloseModal();"></div>
+	<div id="goalModal" class="modal_div radius_box">
+		<h3 class="txt02_bold">운동 목표 입력</h3>
+		<button class="btn btn_close" onClick="fnCloseModal();">×</button>
+		<div class="ipt_box">
+			<input type="text" id="mygoal" placeholder="운동 목표를 입력해주세요">
+		</div>
+		<div class="btn_wrap">
+			<button class="btn btn_style01" onClick="fnCloseModal();">목표 설정</button>
+		</div>
+	</div>
 </body>
 </html>
