--- a/public/www/choi/index.html
+++ b/public/www/choi/index.html
@@ -37,9 +37,17 @@
         </div>
         <div class="sns_login">
             <p class="title">간편 로그인</p>
-            <a href="javascript:void(0);">
-                <img src="img/sns_kakao.png" alt="카카오톡 로그인">
-            </a>
+            <ul class="sns_list">
+                <li onclick="alert('개발 준비 중입니다.');">
+                    <img src="img/sns_kakao.png" alt="카카오톡 로그인">
+                </li>
+                <li onclick="alert('개발 준비 중입니다.');">
+                    <img src="img/sns_naver.png" alt="카카오톡 로그인">
+                </li>
+                <li onclick="alert('개발 준비 중입니다.');">
+                    <img src="img/sns_google.png" alt="카카오톡 로그인">
+                </li>
+            </ul>
         </div>
     </section>
 </body>
